# Active-trace

./: .gitignore
active-trace-main/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
active-trace-main/backend/alembic/: env.py
active-trace-main/backend/alembic/versions/: 0c396488b5e9_create_padron_tables.py  0e9339c786f7_add_fk_to_audit_log_materia_id.py  ae0a8aa0be85_crear_tablas_evaluaciones.py  fbbfb2cc45f9_create_calificacion_and_umbral.py
active-trace-main/backend/app/: main.py
active-trace-main/backend/app/core/: __init__.py  config.py  (+8 more)
active-trace-main/backend/infra/: README-PLACEHOLDER.md
active-trace-main/backend/migrations/: env.py
active-trace-main/backend/monitoring/: README-PLACEHOLDER.md  README.md  grafana_alerts_example.md  manual_alert_validation.md  prometheus.yml  prometheus_setup.py
active-trace-main/backend/scripts/: seed_dev.py
active-trace-main/backend/tenancy/: README-PLACEHOLDER.md
active-trace-main/backend/tests/: conftest.py  test_analisis_service.py  test_app_startup.py  test_auth.py  test_calificacion_repository.py  test_calificacion_service.py  test_carreras.py  test_cohortes.py  test_config.py  test_database.py  test_encryption.py  test_evaluacion_crud.py  test_evaluacion_endpoints.py  test_evaluacion_models.py  test_health.py  test_load_multi_tenant.py  test_materias.py  test_migrations.py  test_observability.py  test_padron_integration_e2e.py  test_padron_repository.py  test_padron_service.py  test_placeholders.py  test_programa_endpoints.py  test_repository.py  test_tenant_models.py
(+259 files in other folders)
